# lecture-ai-engineering

./: .python-version  main.py  pyproject.toml
day1/: day1_practice.ipynb
